--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/home/mel-mars/Desktop/ft_frontend/public/character.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Ping Pong</title>
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div>
+      <picture class="main-character">
+        <img src="./public/character.png" alt="Let's play" />
+      </picture>
+    </div>
   </body>
 </html>
