first page html and css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ping Pong</title>
   </head>
 
   <body>
-    <div>
-      <picture class="main-character">
-        <img src="./public/character.png" alt="Let's play" />
-      </picture>
+    <section class="row">
+      <img class="main-character" src="./public/character.png" alt="Let's play" />
+      <div class="green-box"></div>
+      <div class="green-box2"></div>
+      <div class="white-bar"></div>
+      <div class="white-bar2"></div>
+      <div class="texto-game">
+        <h2>Get Ready</h2>
+        <h1>To Play</h1>
+        <h3>and chat with your friends</h3>
+        <button type="button" class="button-box">Sign in</button>
+      </section>
     </div>
+    <div class="decoration1"></div>
+    <div class="decoration2"></div>
+    <div class="decoration3"></div>
+  </body>
   </body>
 </html>
