--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
@@ -41,7 +42,7 @@
         <span>To Play</span>
         <span>and chat with your friends</span>
         <div>
-          <button type="button" class="button-box">Sign in</button>
+          <button type="button" id="sign-in" class="button-box">Sign in</button>
         </div>
       </div>
     </section>
