--- a/content/index.html
+++ b/content/index.html
@@ -62,7 +62,12 @@
     </section>
 
     <section class="sign_form" hidden>
-      <div></div>
+      <div>
+        <img
+          class="exit"
+          src="./imageLandscape/exit.png"
+          alt="exit button">
+      </div>
       <div class="section">
         <div class="container">
           <div class="row full-height justify-content-center">
