--- a/content/index.html
+++ b/content/index.html
@@ -11,38 +11,23 @@
     <link rel="stylesheet" href="./sign_style.css" />
 
     <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/4.0/examples/sign-in/"
-    />
-    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    /> -->
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="JsFiles/main.js" type="module"></script>
     <script src="JsFiles/Router.js" type="module" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
-    <section class="my-container">
+    <section class="my-container" >
       <img
       class="my-character"
       src="./imageLandscape/character.png"
@@ -65,6 +50,9 @@
     </section>
     
     <section class="sign_form" hidden>
+      <!-- <div class="close_range1"></div>
+      <div class="close_range2"></div>
+      <div class="close_range3"></div> -->
       <div>
         <img class="exit" src="./imageLandscape/exit.png" alt="exit button" />
       </div>
