--- a/content/index.html
+++ b/content/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./sign_style.css" />
     <link rel="stylesheet" href="./animation.css" />
@@ -9,11 +13,10 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
-    <script src="JsFiles/LoadingPages.js" type="module"></script>
-    <script src="JsFiles/main.js" type="module"></script>
-    <script src="JsFiles/Router.js" type="module" defer></script>
+    <script src="JsFiles/LoadingPages.js" type="module" async></script>
+    <script src="JsFiles/main.js" type="module" async></script>
+    <script src="JsFiles/Router.js" type="module" async></script>
   </head>
 
   <body></body>
-  </html>
-  
+</html>
