--- a/content/index.html
+++ b/content/index.html
@@ -6,17 +6,30 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./sign_style.css" />
-    <link rel="stylesheet" href="./animation.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./sign_style.css" />
+    <link rel="stylesheet" href="./animation.css" />
+    <link rel="stylesheet" href="./forget_pass.css" />
     <script src="JsFiles/LoadingPages.js" type="module" async></script>
     <script src="JsFiles/main.js" type="module" async></script>
     <script src="JsFiles/Router.js" type="module" async></script>
   </head>
 
-  <body></body>
+  <body>
+  </body>
 </html>
